infra/aardvark_service.yml
apiVersion: v1
kind: Service
metadata:
  name: aardvark-svc
  labels:
    app: aardvark
spec:
  selector:
      app: aardvark
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: aardvark-port
