infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aardvark-ingress
  annotations:
    # registry.k8s.io/ingress-nginx/controller:v1.7.0
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: aardvark.localtest.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aardvark-svc
              port:
                number: 5000
